--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,6 +15,7 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/esp_lvgl_port: ^2.3.0
+  espressif/button: ^4.1.3
   lvgl/lvgl:
     version: "^8"
     public: true
