--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,6 +16,7 @@ idf_component_register(
             spiffs
             fatfs
             button
+            esp_event
 )
 
 spiffs_create_partition_image(spiffs ../data FLASH_IN_PROJECT)
