--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -20,4 +20,5 @@ idf_component_register(
             json
 )
 
-spiffs_create_partition_image(spiffs ../data FLASH_IN_PROJECT)
+#spiffs_create_partition_image(spiffs ../data FLASH_IN_PROJECT)
+spiffs_create_partition_image(spiffs ../data)
